--- a/modpack.conf
+++ b/modpack.conf
@@ -1,5 +1,5 @@
 name = gold_hunter
 description = gold_hunter gold_hunter mod pack
-author = josegamestest joseanastacio
+author = josegamestest
 title = gold_hunter
  
